{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 49,
  "lineage": "fc9da3b3-1ef8-a739-e5fa-97195dcbab51",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:internet-gateway/igw-0282a4143eb8b6c5a",
            "id": "igw-0282a4143eb8b6c5a",
            "owner_id": "701468629308",
            "tags": {
              "Name": "funds-api-igw",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-igw",
              "Project": "case-itau"
            },
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701468629308:loadbalancer/app/funds-api-alb/8a2d8acbb8f3973c",
            "arn_suffix": "app/funds-api-alb/8a2d8acbb8f3973c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "funds-api-alb-359815732.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:701468629308:loadbalancer/app/funds-api-alb/8a2d8acbb8f3973c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "funds-api-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a3677882264e6d40"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06cf077dc15c74fec"
              },
              {
                "subnet_id": "subnet-0d492843ea95c4d5a"
              }
            ],
            "subnets": [
              "subnet-06cf077dc15c74fec",
              "subnet-0d492843ea95c4d5a"
            ],
            "tags": {
              "Name": "funds-api-alb",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-alb",
              "Project": "case-itau"
            },
            "vpc_id": "vpc-0da95146f315f78e7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701468629308:listener/app/funds-api-alb/8a2d8acbb8f3973c/460b48635315079a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:701468629308:targetgroup/funds-api-tg/edc40fed565f826f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701468629308:listener/app/funds-api-alb/8a2d8acbb8f3973c/460b48635315079a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:701468629308:loadbalancer/app/funds-api-alb/8a2d8acbb8f3973c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.funds_api",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "funds_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:701468629308:targetgroup/funds-api-tg/edc40fed565f826f",
            "arn_suffix": "targetgroup/funds-api-tg/edc40fed565f826f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health/ready",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:701468629308:targetgroup/funds-api-tg/edc40fed565f826f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:701468629308:loadbalancer/app/funds-api-alb/8a2d8acbb8f3973c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "funds-api-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "funds-api-tg",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-tg",
              "Project": "case-itau"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:route-table/rtb-0400d89f55a9cd165",
            "id": "rtb-0400d89f55a9cd165",
            "owner_id": "701468629308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0282a4143eb8b6c5a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "funds-api-public-rt",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-public-rt",
              "Project": "case-itau"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afc703dc9ee0fbea",
            "route_table_id": "rtb-0400d89f55a9cd165",
            "subnet_id": "subnet-0d492843ea95c4d5a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07553267ce23ab5f2",
            "route_table_id": "rtb-0400d89f55a9cd165",
            "subnet_id": "subnet-06cf077dc15c74fec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:security-group/sg-0a3677882264e6d40",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3677882264e6d40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "funds-api-alb-sg",
            "name_prefix": "",
            "owner_id": "701468629308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "funds-api-alb-sg",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-alb-sg",
              "Project": "case-itau"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:security-group/sg-0b0c8dfcdd405c539",
            "description": "ECS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b0c8dfcdd405c539",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a3677882264e6d40"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "funds-api-ecs-sg",
            "name_prefix": "",
            "owner_id": "701468629308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "funds-api-ecs-sg",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-ecs-sg",
              "Project": "case-itau"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:security-group/sg-02f5de9e78475feed",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f5de9e78475feed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SQL Server from ECS",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b0c8dfcdd405c539"
                ],
                "self": false,
                "to_port": 1433
              }
            ],
            "name": "funds-api-rds-sg",
            "name_prefix": "",
            "owner_id": "701468629308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "funds-api-rds-sg",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-rds-sg",
              "Project": "case-itau"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:security-group/sg-06bad3d18dd100e74",
            "description": "ElastiCache Redis security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bad3d18dd100e74",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis from ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b0c8dfcdd405c539"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "funds-api-redis-sg",
            "name_prefix": "",
            "owner_id": "701468629308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "funds-api-redis-sg",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-redis-sg",
              "Project": "case-itau"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:subnet/subnet-0f5fb62e516cbc2af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5fb62e516cbc2af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701468629308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "funds-api-private-a",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-private-a",
              "Project": "case-itau"
            },
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:subnet/subnet-069cdaf5850ab104e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069cdaf5850ab104e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "701468629308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "funds-api-private-b",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-private-b",
              "Project": "case-itau"
            },
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:subnet/subnet-0d492843ea95c4d5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d492843ea95c4d5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "701468629308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "funds-api-public-a",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-public-a",
              "Project": "case-itau"
            },
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:subnet/subnet-06cf077dc15c74fec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cf077dc15c74fec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "701468629308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "funds-api-public-b",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-public-b",
              "Project": "case-itau"
            },
            "vpc_id": "vpc-0da95146f315f78e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:701468629308:vpc/vpc-0da95146f315f78e7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0304cc961e33b7459",
            "default_route_table_id": "rtb-07449406a45ade2c6",
            "default_security_group_id": "sg-0652108a54023fd2d",
            "dhcp_options_id": "dopt-016df0bab1a7938cb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0da95146f315f78e7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07449406a45ade2c6",
            "owner_id": "701468629308",
            "tags": {
              "Name": "funds-api-vpc",
              "Project": "case-itau"
            },
            "tags_all": {
              "Name": "funds-api-vpc",
              "Project": "case-itau"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}